# solana-voting

./: .gitignore  README.md  docker-compose.yml  package-lock.json
basicSolana/: Anchor.toml  package.json
basicSolana/programs/program2/: Cargo.toml
basicSolana/programs/program2/src/: lib.rs
basicSolana/tests/: program2.ts
basicSolana/~.config/solana/: id.json
frontend/: copyidl.js  package-lock.json  package.json
frontend/src/: App.css  App.js  votingidl.json
frontend/src/components/: Accordian.js  Avatars copy.js  Avatars.js  Button.js
programs/: Anchor.toml  kinobi-test.ts  lib.rs
sol-stream-voting/: .env  Cargo.toml
sol-stream-voting/src/: main.rs  models.rs  solana.rs
sol-stream-voting_modified/src/: solana.rs
solana-voting-programs/: Anchor.toml
solana-voting-programs/programs/solana-voting/src/: lib.rs
solana-voting-programs/tests/: solana-voting.ts
testing/: multitest.py  multitest2.py  multitest3.py
